[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "A brief tutorial on FastAPI with UV."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.42.0",
]
